<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/functions_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:gravity="left"
                android:text="@string/gpsAltitudeLabel"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/gpsAltitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:gravity="left"
                android:text="@string/notAvailable"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:gravity="left"
                android:text="@string/googleAltitudeLabel"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/googleAltitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:gravity="center"
                android:text="@string/notAvailable"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView3Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:gravity="left"
                android:text="@string/barometerAltitudeLabel"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/barometerAltitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:gravity="left"
                android:text="@string/notAvailable"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView4Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:gravity="left"
                android:text="@string/mslpLabel"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/mslpBarometerAltitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:gravity="center"
                android:text="@string/notAvailable"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_weight="1"
            android:background="@color/gray"
            android:text="@string/captureButtonLabel" />

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_weight="1"
            android:background="@color/khaki_plus"
            android:text="@string/refreshButtonLabel" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/gpsProviderImage"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal|top"
            android:layout_weight="1"
            android:gravity="center"
            android:contentDescription="@string/notAvailable" />

        <TextView
            android:id="@+id/gpsLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/notAvailable"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/gpsLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/notAvailable"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/gpsAccuracy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/notAvailable"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <fragment
        android:id="@+id/googleMap"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        map:useViewLifecycle="true" />

</LinearLayout>